<resources>
    <string name="app_name">AppointCare</string>
    <string name="appointcare_title">AppointCare</string>
    <string name="unlock_a_world_of_possibilities">Unlock a world of possibilities</string>
    <string name="log_in_or_register_to_get_started">Log In or Register to get started</string>
    <string name="log_in_signInRegister">Log In</string>
    <string name="or_signInRegister">or</string>
    <string name="register_signInRegister">Register</string>
    <string name="log_in_login">Log In</string>
    <string name="e_mail_login">   e-Mail</string>
    <string name="password_login">   Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="register_title">Register</string>
    <string name="register_as_doctor">Register as Doctor</string>
    <string name="register_as_patient">Register as Patient</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in_register">Log In</string>
    <string name="patient_register">Patient Register</string>
    <string name="full_name">Full Name</string>
    <string name="e_mail_register">e-Mail</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="doctor_register">Doctor Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_open">Open Navigation Drawer</string>
    <string name="nav_close">Close Navigation Drawer</string>

    /*Strings for FAQs*/
    <string name="FAQ1">What is AppointCare for?</string>
    <string name="FAQDes1">AppointCare is all about making appointments more flexible and easier between Patients and Doctors</string>

    <string name="FAQ2">How to book an Appointment?</string>
    <string name="FAQDes2">To book an appointment, simply navigate to the "Appointments" section on the app or website, choose your preferred date and time, and follow the prompts to confirm your booking.</string>

    <string name="FAQ3">How does the online consultation work?</string>
    <string name="FAQDes3">After establishing an appointment through a website or app, individuals engage in virtual meetings with healthcare professionals via video or chat, where they share their medical concerns, receive guidance or a diagnosis, and, if required, obtain prescriptions or receive further recommendations for in-person care.</string>

    <string name="FAQ4">What if I need to cancel or reschedule my appointment??</string>
    <string name="FAQDes4"> If you need to cancel or reschedule your appointment, you can typically do so by accessing the online platform, navigating to your scheduled appointments, and following the provided options for rescheduling or cancellation.</string>

    <string name="FAQ5">Is AppointCare safe to use?</string>
    <string name="FAQDes5">Yes, your safety is our top priority. AppointCare is built with robust security measures, including encryption and regular vulnerability assessments, to ensure your data remains protected at all times.</string>
    /* END OF FAQS*/

    /*Strings for Services*/

    <string name="ServiceDescription">Our services include diagnosing fractures and injuries, X-ray checkups, specialist consultations, eye care, and various treatments.</string>


    <string name="Service1">Diagnosis</string>
    <string name="ServiceDes1">Our services include diagnosing fractures and injuries, X-ray checkups, specialist consultations, eye care, and various treatments.</string>

    <string name="Service2">Fractures and Injury</string>
    <string name="ServiceDes2">Our expertise includes diagnosing and treating fractures and injuries promptly and effectively.</string>

    <string name="Service3">Xray Check-up</string>
    <string name="ServiceDes3">Benefit from our detailed X-ray examinations, offering accurate insights into your health and aiding in precise medical assessments.</string>

    <string name="Service4">Specialist Consultations</string>
    <string name="ServiceDes4">Receive specialized medical advice through our expert consultations, customized to meet your individual health needs.</string>

    <string name="Service5">Treatments</string>
    <string name="ServiceDes5">Discover a variety of treatments designed to target specific health conditions and enhance your overall well-being.</string>

    <string name="Service6">Eye Care</string>
    <string name="ServiceDes6">Prioritize your eye health with our dedicated eye care services, offering everything from routine check-ups to specialized treatments.</string>
    /* END OF SERVICES*/

    <string name="about_us_navmenu">About Us</string>
    <string name="contact_us_navmenu">Contact Us</string>
    <string name="faqs_navmenu">FAQs</string>
    <string name="search_navmenu">Search</string>
    <string name="services_navmenu">Services</string>
    <string name="profile_navmenu">Profile</string>
    <string name="tvDoctorLogin">Doctor Login</string>
    <string name="tv_log_in">Log In</string>
    <string name="tv_log_in_as_doctor">Log-In as Doctor</string>
    <string name="tv_log_in_as_patient">Log-In as Patient</string>
    <string name="tv_dont_have_an_account_yet">Dont have an account yet?</string>
    <string name="tv_register">Register</string>
    <string name="tv_patient_login">Patient Login</string>
    <string name="tv_title_registration">Registration</string>
    <string name="role_tv">Role:</string>
    <string name="doctor_rg">Doctor</string>
    <string name="patient_rg">Patient</string>
    <string name="first_name_tv">First Name</string>
    <string name="last_name_tf">Last Name</string>
    <string name="phone_number_63_tf">Phone Number (+63)</string>
    <string name="gender_rg">Gender:</string>
    <string name="e_mail_tv">e-Mail</string>
    <string name="age_tf">Age</string>
    <string name="password_tf">Password</string>
    <string name="confirm_password_tf">Confirm Password</string>
    <string name="appointcare_2024_tv">AppointCare 2024</string>
    <string name="frequently_asked_questions_tv">Frequently Asked Questions</string>
    <string name="welcome_to_appointment_care_tv">Welcome to Appointment Care</string>
    <string name="discover_the_essence_of_our_app_explore_its_wonders_and_possibilities_today_tv">Discover the essence of our app. Explore its wonders and possibilities today.</string>
    <string name="learn_more_tv">Learn More ↗</string>
    <string name="services_tv">Services</string>
    <string name="btn_learn_more">Learn More</string>
    <string name="learn_more_btn">Learn More</string>
    <string name="top_doctors_tv">Top Doctors ⭐</string>

    <string name="googleMap_API">AIzaSyDfferTN0U_Bx6Llfl9Y4O-XGVFvzatouY</string>


</resources>