<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view"
    android:theme="@style/ThemeOverlay.AppCompat.Light">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/baseline_account_circle_24"
            android:title="@string/profile_navmenu"
            />


        <item
            android:id="@+id/nav_bookings"
            android:icon="@drawable/baseline_edit_calendar_24"
            android:title="My Bookings"
            />

        <item
            android:id="@+id/nav_historybookings"
            android:icon="@drawable/baseline_manage_history_24"
            android:title="Consultation History"
            />

        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/baseline_search_24"
            android:title="@string/search_navmenu"
            />
        <item
            android:id="@+id/nav_faqs"
            android:icon="@drawable/baseline_question_mark_24"
            android:title="@string/faqs_navmenu"
            />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/baseline_phone_24"
            android:title="@string/contact_us_navmenu"
            />
        <item
            android:id="@+id/nav_aboutus"
            android:icon="@drawable/baseline_people_alt_24"
            android:title="@string/about_us_navmenu"
            />


    </group>

</menu>