<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignInRegister"
    android:background="#fff">

    <ImageView
        android:id="@+id/img_logo_signinregister"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/splashscreenlogo" />
    <TextView
        android:id="@+id/singinregisterTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_logo_signinregister"
        android:text="@string/appointcare_title"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="#6EAB36"
        />
    <TextView
        android:id="@+id/signinregisterQoute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/singinregisterTitle"
        android:text="@string/unlock_a_world_of_possibilities"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="#517E29"
        />
    <TextView
        android:id="@+id/signinregisterQoute2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signinregisterQoute"
        android:text="@string/log_in_or_register_to_get_started"
        android:textAlignment="center"
        android:textColor="#007E85"/>

    <Button
        android:id="@+id/btn_SignIn"
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:layout_below="@id/signinregisterQoute2"
        android:layout_centerInParent="true"
        android:layout_marginTop="200dp"
        android:backgroundTint="#007E85"
        android:text="@string/log_in_signInRegister"
        android:textColor="#FFF"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/orText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_SignIn"
        android:text="@string/or_signInRegister"
        android:textColor="#007E85"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/btn_Register"
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:layout_below="@id/orText"
        android:layout_centerInParent="true"
        android:backgroundTint="#6EAB36"
        android:text="@string/register_signInRegister"
        android:textColor="#fff"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/appointcare_2024_tv"
        android:textAlignment="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:textColor="#707070"/>





</RelativeLayout>