<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Register"
    android:background="#fff">

  <ImageView
      android:id="@+id/img_logo_register"
      android:layout_width="150dp"
      android:layout_height="150dp"
      android:layout_alignParentStart="true"
      android:layout_alignParentTop="true"
      android:layout_alignParentEnd="true"
      android:layout_marginTop="70dp"
      android:src="@drawable/splashscreenlogo" />

  <TextView
      android:id="@+id/registerTitle"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/img_logo_register"
      android:text="@string/register_title"
      android:textAlignment="center"
      android:textSize="40sp"
      android:textStyle="bold"
      android:textColor="#6EAB36"
      />

  <Button
      android:id="@+id/btn_RegDoctor"
      android:layout_width="350dp"
      android:layout_height="80dp"
      android:layout_above="@+id/orText"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="80dp"
      android:layout_marginBottom="5dp"
      android:backgroundTint="#007E85"
      android:text="@string/register_as_doctor"
      android:textColor="#FFF"
      android:textSize="20sp" />

  <TextView
      android:id="@+id/orText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_above="@+id/btn_RegPatient"
      android:text="@string/or_signInRegister"
      android:textAlignment="center"
      android:textColor="#007E85" />

  <Button
      android:id="@+id/btn_RegPatient"
      android:layout_width="350dp"
      android:layout_height="80dp"
      android:layout_above="@+id/alreadyhaveaccount"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="5dp"
      android:backgroundTint="#007E85"
      android:text="@string/register_as_patient"
      android:textColor="#FFF"
      android:textSize="20sp" />

  <TextView
      android:id="@+id/alreadyhaveaccount"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_above="@+id/alreadyhaveaccountLOGIN"
      android:layout_marginTop="100dp"
      android:text="@string/already_have_an_account"
      android:textAlignment="center"
      android:textColor="#007E85"
      android:textSize="16sp" />

  <TextView
      android:id="@+id/alreadyhaveaccountLOGIN"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_marginTop="5dp"
      android:layout_marginBottom="20dp"
      android:text="@string/log_in_register"
      android:textAlignment="center"
      android:textColor="#007E85"
      android:textSize="25sp"
      android:textStyle="bold" />

</RelativeLayout>