<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogIn"
    android:background="#fff">

    <ImageView
        android:id="@+id/img_logo_register"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/splashscreenlogo" />

    <TextView
        android:id="@+id/registerTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_logo_register"
        android:layout_marginTop="30dp"
        android:text="@string/tv_log_in"
        android:textAlignment="center"
        android:textColor="#6EAB36"
        android:textSize="40sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_LogInDoctor"
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:layout_below="@+id/registerTitle"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="#007E85"
        android:text="@string/tv_log_in_as_doctor"
        android:textColor="#FFF"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/orText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_LogInDoctor"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/or_signInRegister"
        android:textAlignment="center"
        android:textColor="#007E85" />

    <Button
        android:id="@+id/btn_LogInPatient"
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:layout_below="@+id/orText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="#007E85"
        android:text="@string/tv_log_in_as_patient"
        android:textColor="#FFF"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/alreadyhaveaccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_LogInPatient"
        android:layout_marginTop="133dp"
        android:text="@string/tv_dont_have_an_account_yet"
        android:textAlignment="center"
        android:textColor="#007E85"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/alreadyhaveaccount"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="84dp"
        android:text="@string/tv_register"
        android:textAlignment="center"
        android:textColor="#007E85"
        android:textSize="25sp"
        android:textStyle="bold" />

</RelativeLayout>