<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PatientLogIn"
    android:background="#fff">

    <ImageView
        android:id="@+id/img_logo_login"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/splashscreenlogo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="500dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        android:backgroundTint="#FFF"
        android:layout_marginTop="30dp"
        android:layout_centerInParent="true"
        android:layout_below="@id/img_logo_login">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/login_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Patient Login"
                android:textAlignment="center"
                android:textSize="40sp"
                android:textStyle="bold"
                android:textColor="#6EAB36"/>

            <EditText
                android:id="@+id/emaillogin"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:inputType="textEmailAddress"
                android:layout_below="@id/login_login"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:hint="@string/e_mail_login"/>

            <EditText
                android:id="@+id/passwordlogin"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_below="@id/emaillogin"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:hint="@string/password_login"/>

            <TextView
                android:id="@+id/forgotpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/passwordlogin"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/forgot_password"
                android:textAlignment="viewEnd"
                android:textColor="#007E85"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_PatientLogIn"
                android:layout_width="350dp"
                android:layout_height="80dp"
                android:layout_below="@id/forgotpass"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:backgroundTint="#007E85"
                android:text="@string/log_in_signInRegister"
                android:textColor="#FFF"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_PatientLogIn"
                android:layout_marginTop="15dp"
                android:text="@string/register"
                android:textAlignment="center"
                android:textColor="#007E85"
                android:textSize="18sp"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>