<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ProfileFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_logo_register"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="70dp"
                android:src="@drawable/splashscreenlogo" />
            <TextView
                android:id="@+id/FAQTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_logo_register"
                android:text="Frequently Asked Questions"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="#6EAB36"
                />

            <androidx.cardview.widget.CardView
                android:id="@+id/expandableFAQ1"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/FAQTitle"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:contentPadding="20dp">

                <LinearLayout
                    android:id="@+id/layoutsFAQ1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/FAQ1"
                        android:textColor="#007E85"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/FAQ1Details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/FAQDes1"
                        android:textColor="#49672D"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:visibility="gone" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/expandableFAQ2"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/expandableFAQ1"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                app:cardBackgroundColor="#fff"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:contentPadding="20dp">

                <LinearLayout
                    android:id="@+id/layoutsFAQ2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/FAQ2"
                        android:textColor="#007E85"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/FAQ2Details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/FAQDes2"
                        android:textColor="#49672D"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:visibility="gone" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/expandableFAQ3"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/expandableFAQ2"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                app:cardBackgroundColor="#fff"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:contentPadding="20dp">

                <LinearLayout
                    android:id="@+id/layoutsFAQ3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/FAQ3"
                        android:textColor="#007E85"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/FAQ3Details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/FAQDes3"
                        android:textColor="#49672D"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:visibility="gone" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/expandableFAQ4"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/expandableFAQ3"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                app:cardBackgroundColor="#fff"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:contentPadding="20dp">

                <LinearLayout
                    android:id="@+id/layoutsFAQ4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/FAQ4"
                        android:textColor="#007E85"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/FAQ4Details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/FAQDes4"
                        android:textColor="#49672D"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:visibility="gone" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/expandableFAQ5"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="100dp"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/expandableFAQ4"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                app:cardBackgroundColor="#fff"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:contentPadding="20dp">

                <LinearLayout
                    android:id="@+id/layoutsFAQ5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/FAQ5"
                        android:textColor="#007E85"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/FAQ5Details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/FAQDes5"
                        android:textColor="#49672D"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:visibility="gone" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </FrameLayout>

</ScrollView>